- Entrances to So'najiz and Zir'vitar are active by default
- Temple Mine B3 and B4 key locks only require 1 key each instead of 3 and 4 keys respectively
- So'najiz Trial of Persistence only uses a key to open both South and North hallways

---

# v0.2.2

Fixes:
- More guild fixes (hopefully) to prevent softlocks due to NPCs not spawning

Changes: 
- A NPC to remove any party-locks has been introduced in Rookie Harbor - Info Hub GF
- All SP upgrades are now incremental instead of fixed (which also includes a small "fix" of game code)
- Kit quest (An unfortunate series of features) can now be started with party
- VT Boss&Shade barrier can now be set to be only boss, only shades or both

CC-Item-Randomizer specific:
- Any toggles are now saved into storage

# v0.2.1

Fixes:
- Emilie now is not locked anymore if she joins through the guild cutscene in Old Obelisk
- Guild intro can be completable
- Hlin should be present for observatory quest intro in Guild HQ (it was locked to plot being around post-meteor shade events)
- V'rda Vil NPCs should now hide properly
- Smelter Digmo only activates when entering the room after having Infected Digmo killed
- Removed a trigger from Vermillion Tower that advances plot to a certain point, where lots of other cutscenes start messing up

Changes:
- All the shareholder events in Rhombus Square can be now done as soon as you gain access to Rhombus Square, and finish the guild intro


# v0.2.0

New Patches:

- Open Faj'ro
- Meteor Shade Wasteland

Fixes:

- Fixed the compatiblity between multiple extra patches, which wasn't working at all since VT Skip patch was added
- Fixed a few V'rda Vil mentions about the cat plague, and also removed the cat plague outside Elder's House (there's still a few outside K'tara's House lets pretend these are their pets)
- Fixed a wrong variable that didn't let you start Mr. Nomsworth second quest in Rookie Harbor
- Fixed the Black Market guard despawning after talking to him once.